--- a/front_end/style.css
+++ b/front_end/style.css
@@ -1,3 +1,86 @@
 * {
-    
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    height: 100vh;
+    width: 100vw;
+}
+
+/* arena */
+
+.arena {
+    align-items: center;
+    background-color: darkgreen;
+    display: flex;
+    float: left;
+    height: 100vh;
+    justify-content: center;
+    width: 75vw;
+}
+
+#wheel {
+    background: linear-gradient(to right bottom, yellow 50%, blue 50%);
+    border-radius: 50%;
+    height: 700px;
+    transition: transform 2s;
+    width: 700px;
+}
+
+.wheel_inner {
+    background-color: white;
+    border-radius: 50%;
+    height: 600px;
+    margin-left: 50px;
+    margin-top: 50px;
+    width: 600px;
+}
+
+/* the left div (.guess) */
+
+.guess {
+    background-color: darkgreen;
+    float: left;
+    height: 100vh;
+    width: 25vw;
+}
+
+#higher, #lower {
+    align-items: center;
+    display: flex;
+    height: 28vh;
+    justify-content: center;
+    width: 25vw;
+}
+
+#higher, #lower p {
+    color: red;
+    cursor: pointer;
+    font-size: 175px;
+    transition: color .5s;
+}
+
+/* betting */
+
+.bet {
+    height: 44vh;
+    width: 25vw;
+}
+
+.bet_box {
+    align-items: center;
+    display: flex;
+    float: left;
+    height: 22vh;
+    justify-content: center;
+    width: 12.5vw;
+}
+
+.bet_box p {
+    background-color: gold;
+    border-radius: 50%;
+    font-size: 50px;
+    padding: 30px;
 }
